[package]
name = "ruspec"
version = "0.1.3"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"
description = "write like Rspec testing framework with rust"
homepage = "https://github.com/k-nasa/ruspec"
repository = "https://github.com/k-nasa/ruspec"
license-file = "LICENSE"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["rspec", "test", "testing", "ruspec", ]


[dependencies]
syn = { version = "0.15.34", features = ["full"] }
proc-macro2 = "0.4.30"
quote = "0.6"
failure = "0.1.5"
colored = "1.8.0"
Inflector = "0.11.4"

[lib]
proc_macro = true
