[package]
name = "ruspec"
version = "0.1.3"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"
description = "write like Rspec testing framework with rust"
homepage = "https://github.com/k-nasa/ruspec"
repository = "https://github.com/k-nasa/ruspec"
license-file = "LICENSE"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["rspec", "test", "testing", "ruspec", ]


[dependencies]
syn = { version = "1.0.13", features = ["full"] }
proc-macro2 = "1.0.8"
quote = "1.0.2"
failure = "0.1.6"
colored = "1.9.2"
Inflector = "0.11.4"

[lib]
proc_macro = true
