[package]
name = "ruspec"
version = "0.1.3"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"
description = "write like Rspec testing framework with rust"
homepage = "https://github.com/k-nasa/ruspec"
repository = "https://github.com/k-nasa/ruspec"
license-file = "LICENSE"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["rspec", "test", "testing", "ruspec", ]


[dependencies]
syn = { version = "1.0.17", features = ["full"] }
proc-macro2 = "1.0.10"
quote = "1.0.3"
failure = "0.1.7"
colored = "2.0.0"

[lib]
proc_macro = true
